manifests/deployment (1).yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: vscodebugbash1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vscodebugbash1
    spec:
      containers:
        - name: vscodebugbash1
          image: kapasrijkubacr.azurecr.io/vscodebugbash1
          ports:
          - containerPort: 80
