manifests/deployment (2).yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: bugbash1622
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: bugbash1622
    spec:
      containers:
        - name: bugbash1622
          image: kapasrijkubacr.azurecr.io/bugbash1622
          ports:
          - containerPort: 8080
