manifests/service (1).yml
apiVersion: v1
kind: Service
metadata:
    name: kpwithingress
    labels:
        app: kpwithingress
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: kpwithingress
