manifests/service-ingress.yml
apiVersion: v1
kind: Service
metadata:
    name: bugbash1622
    labels:
        app: bugbash1622
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: bugbash1622
