manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: kpwithoutingress
    labels:
        app: kpwithoutingress
spec:
    type: LoadBalancer
    ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: kpwithoutingress
